@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-04-06T00:36:21Z",
-  "count" : 15,
-  "count_minmax" : [ 14, 15 ],
+  "timestamp" : "2022-04-19T08:10:20Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 15 ],
   "count_prev_day_inc" : 14,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
