@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-04-18T16:10:04Z",
+  "timestamp" : "2022-04-19T08:10:20Z",
   "count_outdated" : 908,
   "uniques_outdated" : 50,
-  "count" : 1034,
+  "count" : 1020,
   "uniques" : 63,
   "views" : [
     {
       "timestamp": "2022-04-05T00:00:00Z",
-      "count": 15,
-      "count_minmax": [ 14, 15 ],
+      "count": 1,
+      "count_minmax": [ 1, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
