@@ -1,10 +1,10 @@
 {
-  "count": 126,
+  "count": 112,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-05T00:00:00Z",
-      "count": 15,
+      "count": 1,
       "uniques": 1
     },
     {
