@@ -1,3 +1,9 @@
+2022-04-19T08:10:20Z:
+* notice: last 14d: all unq: 112 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 908 50 / 1034 63
+* notice: next accum: outdated-all outdated-unq / all unq: 908 50 / 1020 63
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -14 // +0 +0 / -0 -14
+
 2022-04-18T16:10:04Z:
 * notice: last 14d: all unq: 126 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 907 49 / 1029 62
